# learn-attn

./: .gitignore  CLAUDE.md  README.md  build.sh  pyproject.toml  the-annotated-transformer.txt
babygpt/: config.py  dataset.py  generate.py  model.py  tokenizer.py  train.py
docs/advanced/: appendix-hardware.tex  ch-01-bpe-tokenization.tex  ch-02-scaling-up.tex  ch-03-modern-attention.tex  ch-04-data-pipeline.tex  ch-05-distributed-training.tex  ch-06-training-at-scale.tex  ch-07-efficient-inference.tex  ch-08-evaluation.tex  microgpt-tutorial.tex  preamble-advanced.tex
docs/basic/: babygpt-tutorial.tex  ch-01-attention.tex  ch-02-transformer-block.tex  ch-04-from-transformer-to-gpt.tex  preamble.tex
learn/: 01-attention-from-first-principles.tex  02-the-transformer-block.tex  03-the-full-transformer.tex  04-from-transformer-to-gpt.tex  05-training.tex  06-generation-and-sampling.tex  ch-01-attention.tex  ch-03-full-transformer.tex  ch-04-from-transformer-to-gpt.tex  ch-05-training.tex  ch-06-generation.tex  preamble.tex
microgpt/: __init__.py  attention.py  config.py  dataloader.py  dataset.py  distributed.py  eval.py  generate.py  model.py  tokenizer.py  train.py
src/: config.py  dataset.py  generate.py  model.py  tokenizer.py  train.py
