[project]
name = "learn-attn"
version = "0.1.0"
description = "GPT from scratch — educational transformer implementations (BabyGPT + MicroGPT)"
requires-python = ">=3.14"
dependencies = [
    "torch",
    "numpy",
    "tiktoken",
    "regex",
    "pyarrow",
    "requests",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
